# PLCore

./: PL.cabal  PL.hs  PLRepl.hs  README.md  UI.hs  bitbucket-pipelines.yml  private-stack.yaml  stack.yaml
PL/: Abstracts.hs  Bindings.hs  Binds.hs  Case.hs  CodeStore.hs  Commented.hs  Error.hs  Evaluate.hs  Execute.hs  Expr.hs  ExprLike.hs  FixExpr.hs  FixPhase.hs  FixType.hs  Grammar.hs  Hash.hs  HashStore.hs  Iso.hs  Kind.hs  MatchArg.hs  Megaparsec.hs  Name.hs  Parser.hs  Pattern.hs  Printer.hs  Reduce.hs  ReduceType.hs  Repl.hs  Resolve.hs  Serialize.hs  ShortStore.hs  Store.hs  Test.hs  TyVar.hs  Type.hs  TypeCheck.hs  TypeCtx.hs  Var.hs
PL/Binds/: Ix.hs
PL/Grammar/: Lispy.hs
PL/Grammar/Lispy/: Case.hs  CaseIso.hs  Expr.hs  ExprIso.hs  Kind.hs  KindIso.hs  MatchArg.hs  MatchArgIso.hs  Type.hs  TypeIso.hs
PL/PLGrammar/: Grammar.hs  Iso.hs
PL/PLParser/: Parser.hs
PL/PLParser/Parser/: Cursor.hs  Expected.hs
PL/PLPrinter/: Printer.hs
PL/PLPrinter/Printer/: Debug.hs  Doc.hs
PL/Parser/: Cursor.hs  Expected.hs  Lispy.hs
PL/Parser/Lispy/: Expr.hs  Kind.hs  Type.hs
PL/Printer/: Debug.hs  Doc.hs
PL/Store/: Code.hs  File.hs  Memory.hs  Nested.hs
PL/Store/File/: Path.hs
PL/Test/: Expr.hs  ExprSpec.hs  ExprTestCase.hs  MatchArg.hs  MatchArgTestCase.hs  Name.hs  Pattern.hs  PatternTestCase.hs  Shared.hs  Source.hs  Spec.hs  Type.hs  TypeTestCase.hs  Util.hs  Var.hs
PL/Test/Expr/: BigLam.hs  Binding.hs  Boolean.hs  Case.hs  Function.hs  Lam.hs  List.hs  Maybe.hs  Natural.hs  Product.hs  SelfTypes.hs  Sum.hs  Union.hs
PL/Test/MatchArg/: Bind.hs  Binding.hs  Product.hs  Sum.hs  Union.hs
PL/Test/Parsing/: Expr.hs  MatchArg.hs  Pattern.hs  Type.hs
PL/Test/Pattern/: Bind.hs  Binding.hs  Product.hs  SelfType.hs  Sum.hs  Union.hs
PL/Test/Reducing/: Expr.hs  MatchArg.hs  Pattern.hs  Type.hs
PL/Test/Type/: Arrow.hs  BigArrow.hs  Named.hs  Product.hs  Sum.hs  TypeBinding.hs  TypeLam.hs  Union.hs
PL/Test/TypeChecking/: Expr.hs  MatchArg.hs  Pattern.hs  Type.hs
PL/Type/: Eq.hs
Test/: Expr.hs  ExprSpec.hs  ExprTestCase.hs  GrammarSpec.hs  MatchArg.hs  MatchArgSpec.hs  MatchArgTestCase.hs  Name.hs  ParserSpec.hs  Source.hs  Util.hs  Var.hs
Test/Expr/: BigLam.hs  Boolean.hs  Case.hs  Function.hs  Lam.hs  List.hs  Natural.hs  Product.hs  Sum.hs  Union.hs
Test/ExprSpec/: BigLam.hs  Boolean.hs  Case.hs  Function.hs  Lam.hs  List.hs  Natural.hs  Product.hs  Sum.hs  Union.hs
Test/MatchArg/: Bind.hs  Binding.hs  Product.hs  Sum.hs  Union.hs
Test/MatchArgSpec/: Bind.hs  Binding.hs  Product.hs  Sum.hs  Union.hs
Test/PL/Test/: ExprSpec.hs  MatchArgSpec.hs  PatternSpec.hs  TypeSpec.hs
Test/PL/Test/Store/File/: PathSpec.hs
