name:                PL
version:             0.1.0.0
synopsis:            A Programming Language 'designed' according to my whims.
description:         Anonymous functions, sums, products and union types form
                     the base of the language which will be extended whimsically.
-- license:             
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
category:            PL
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     PL
                     , PL.Abstracts
                     , PL.Bindings
                     , PL.Binds
                     , PL.Binds.Ix
                     , PL.Case
                     , PL.Error
                     , PL.Expr
                     , PL.FixExpr
                     , PL.ExprLike
                     , PL.Grammar
                     , PL.Kind
                     , PL.Name
                     , PL.Reduce
                     , PL.ReduceType
                     , PL.TyVar
                     , PL.Type
                     , PL.FixType
                     , PL.Type.Eq
                     , PL.TypeCtx
                     , PL.Var
                     , PL.Megaparsec

                     , Test.Expr
                     , Test.Expr.BigLam
                     , Test.Expr.Boolean
                     , Test.Expr.Function
                     , Test.Expr.Lam
                     , Test.Expr.List
                     , Test.Expr.Natural
                     , Test.Expr.Product
                     , Test.Expr.Sum
                     , Test.Expr.Union
                     , Test.ExprTestCase
                     , Test.MatchArg
                     , Test.MatchArg.Bind
                     , Test.MatchArg.Binding
                     , Test.MatchArg.Product
                     , Test.MatchArg.Sum
                     , Test.MatchArg.Union
                     , Test.MatchArgTestCase
                     , Test.Source

  -- other-modules:       
  other-extensions:    OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , LambdaCase

  build-depends:       base >=4.7
                     , containers >=0.5
                     , semigroups
                     , text
                     , PLGrammar
                     , PLPrinter
                     , PLParser
                     , megaparsec >=6.4.0
                     , hspec
                     , QuickCheck
                     , quickcheck-instances
                     , PLParser
                     , PLPrinter

  -- hs-source-dirs:      
  default-language:    Haskell2010

