name:                PL
version:             0.1.0.0
synopsis:            A Programming Language 'designed' according to my whims.
description:         Anonymous functions, sums, products and union types form
                     the base of the language which will be extended whimsically.
-- license:             
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
category:            PL
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     PL
                     , PL.Abstracts
                     , PL.Bindings
                     , PL.Binds
                     , PL.Binds.Ix
                     , PL.Case
                     , PL.Error
                     , PL.Expr
                     , PL.FixExpr
                     , PL.ExprLike
                     , PL.Kind
                     , PL.Name
                     , PL.Reduce
                     , PL.ReduceType
                     , PL.TyVar
                     , PL.Type
                     , PL.FixType
                     , PL.Type.Eq
                     , PL.TypeCtx
                     , PL.Var
                     , PL.Megaparsec

                     , PL.Test.Expr
                     , PL.Test.Expr.BigLam
                     , PL.Test.Expr.Boolean
                     , PL.Test.Expr.Function
                     , PL.Test.Expr.Lam
                     , PL.Test.Expr.List
                     , PL.Test.Expr.Natural
                     , PL.Test.Expr.Product
                     , PL.Test.Expr.Sum
                     , PL.Test.Expr.Union
                     , PL.Test.ExprTestCase
                     , PL.Test.MatchArg
                     , PL.Test.MatchArg.Bind
                     , PL.Test.MatchArg.Binding
                     , PL.Test.MatchArg.Product
                     , PL.Test.MatchArg.Sum
                     , PL.Test.MatchArg.Union
                     , PL.Test.MatchArgTestCase
                     , PL.Test.Source

  -- other-modules:       
  other-extensions:    OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , LambdaCase

  build-depends:       base >=4.7
                     , containers >=0.5
                     , semigroups
                     , text
                     , PLGrammar
                     , PLPrinter
                     , PLParser
                     , megaparsec >=6.4.0
                     , hspec
                     , QuickCheck
                     , quickcheck-instances
                     , PLParser
                     , PLPrinter

  -- hs-source-dirs:      
  default-language:    Haskell2010

