name:                PL
version:             0.2.0.0
synopsis:            A Programming Language 'designed' according to my whims.
description:         Anonymous functions, sums, products and union types form
                     the base of the language which will be extended whimsically.
-- license:             
author:              Samuel A. Yallop
maintainer:          syallop@gmail.com
copyright:           Samuel A. Yallop
category:            PL
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     PL
                     , PL.Bindings
                     , PL.Binds
                     , PL.Binds.Ix
                     , PL.Case
                     , PL.Commented
                     , PL.Error
                     , PL.Expr
                     , PL.Pattern
                     , PL.FixPhase
                     , PL.ExprLike
                     , PL.Kind
                     , PL.Name
                     , PL.Reduce
                     , PL.ReduceType
                     , PL.TyVar
                     , PL.Type
                     , PL.Type.Eq
                     , PL.TypeCtx
                     , PL.Var
                     , PL.Megaparsec

                     , PL.Test.ExprTestCase
                     , PL.Test.TypeTestCase
                     , PL.Test.PatternTestCase
                     , PL.Test.Shared

                     , PL.Test.Expr
                     , PL.Test.Expr.BigLam
                     , PL.Test.Expr.Boolean
                     , PL.Test.Expr.Function
                     , PL.Test.Expr.Maybe
                     , PL.Test.Expr.Lam
                     , PL.Test.Expr.List
                     , PL.Test.Expr.Natural
                     , PL.Test.Expr.Product
                     , PL.Test.Expr.Sum
                     , PL.Test.Expr.Union

                     , PL.Test.Type
                     , PL.Test.Type.Named

                     , PL.Test.Pattern
                     , PL.Test.Pattern.Bind
                     , PL.Test.Pattern.Binding
                     , PL.Test.Pattern.Product
                     , PL.Test.Pattern.Sum
                     , PL.Test.Pattern.Union

                     , PL.Test.Parsing.Expr
                     , PL.Test.Parsing.Type
                     , PL.Test.Parsing.Pattern

                     , PL.Test.TypeChecking.Expr
                     , PL.Test.TypeChecking.Type
                     , PL.Test.TypeChecking.Pattern

                     , PL.Test.Reducing.Expr
                     , PL.Test.Reducing.Type
                     , PL.Test.Reducing.Pattern

                     , PL.Test.Source
                     , PL.Test.Util

  -- other-modules:       
  other-extensions:    OverloadedStrings
                     , GeneralizedNewtypeDeriving
                     , LambdaCase

  build-depends:       base >= 4.12

                     , PLGrammar  >= 0.4
                     , PLPrinter  >= 0.3
                     , Reversible >= 0.1

                     , QuickCheck
                     , containers >=0.5
                     , hedgehog
                     , hspec
                     , megaparsec >=6.4.0
                     , parser-combinators
                     , quickcheck-instances
                     , semigroups
                     , text
                     , ghc-prim

  -- hs-source-dirs:      
  default-language:    Haskell2010

  ghc-options: -fwarn-incomplete-patterns -Werror=incomplete-patterns

test-suite hspec
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  hs-source-dirs:    Test

  other-modules:     PL.Test.ExprSpec
                   , PL.Test.PatternSpec
                   , PL.Test.TypeSpec

  build-depends:     base >=4.7
                   , PL
                   , PLGrammar  >= 0.4
                   , PLPrinter  >= 0.3
                   , Reversible >= 0.1

                   , QuickCheck
                   , containers >=0.5
                   , hedgehog
                   , hspec
                   , megaparsec >=6.4.0
                   , parser-combinators
                   , quickcheck-instances
                   , semigroups
                   , text
                   , ghc-prim

  default-language:  Haskell2010

  other-extensions:  OverloadedStrings
                   , GeneralizedNewtypeDeriving
                   , LambdaCase

  default-language:    Haskell2010
